samples/_failures_safe/1761635538_5d5d3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4aba2a02.c: In function ‘main’:
./samples/SAFE/__tmp_4aba2a02.c:144:5: error: expected expression at end of input
  144 |     size_t decompressed_size =
      |     ^~~~~~
./samples/SAFE/__tmp_4aba2a02.c:144:5: error: expected declaration or statement at end of input
